[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/PlayerInfo.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/wizard/WizardPlayerInfo.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://characters/wizard/sprites/geyser_charge.png" type="Texture" id=4]
[ext_resource path="res://characters/wizard/sprites/spark_speed.png" type="Texture" id=5]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.665893 )
colors = PoolColorArray( 0, 0.392157, 1, 0.160784 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 100

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.805104 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=1]
gradient = SubResource( 2 )
width = 100

[node name="PlayerInfo" instance=ExtResource( 1 )]
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 25.0
margin_right = -21.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="0"]
margin_right = 100.0
margin_bottom = 15.0
alignment = 1

[node name="HoverBar" type="TextureProgress" parent="HBoxContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
margin_top = 2.0
margin_right = 100.0
margin_bottom = 12.0
rect_min_size = Vector2( 100, 10 )
max_value = 1.0
step = 0.001
value = 1.0
texture_under = SubResource( 4 )
texture_progress = SubResource( 1 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HoverBar" index="0"]
margin_top = -7.0
margin_right = 100.0
margin_bottom = 4.0
text = "swag"
align = 1

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/HoverBar" index="1"]
margin_right = 100.0
margin_bottom = 10.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HoverBar/Control" index="0"]
margin_top = -21.0
margin_right = 100.0
margin_bottom = 13.0
alignment = 1

[node name="1" type="TextureRect" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer2" index="0"]
unique_name_in_owner = true
margin_left = 25.0
margin_right = 41.0
margin_bottom = 34.0
texture = ExtResource( 4 )

[node name="2" type="TextureRect" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer2" index="1"]
unique_name_in_owner = true
margin_left = 42.0
margin_right = 58.0
margin_bottom = 34.0
texture = ExtResource( 4 )

[node name="3" type="TextureRect" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer2" index="2"]
unique_name_in_owner = true
margin_left = 59.0
margin_right = 75.0
margin_bottom = 34.0
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HoverBar/Control" index="1"]
unique_name_in_owner = true
margin_top = -11.0
margin_right = 100.0
margin_bottom = 5.0
alignment = 2

[node name="SparkSpeed" type="TextureRect" parent="HBoxContainer/VBoxContainer/HoverBar/Control/HBoxContainer" index="0"]
unique_name_in_owner = true
margin_left = 84.0
margin_right = 100.0
margin_bottom = 16.0
texture = ExtResource( 5 )
